@@ -38,6 +38,8 @@
 <p>2016-03-23  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/miff.c (ReadMIFFImage): Fix SourceForge bug #376 &quot;SIGABRT
+in magick/colorspace.c:1052&quot;.</li>
 <li>magick/shear.c (RotateImage): Fix SourceForge bug #375 &quot;SIGABRT
 in magick/image.c:1230&quot;.</li>
 <li>coders/sun.c (DecodeImage): Fix SourceForge bug #368
